[tool.poetry]
name = "twine watchdog"
version = "0.1.0"
description = "This is a tool to inject the script tags into the html files created by Twine IDE"
authors = ["Yusef Neeme"]

[tool.poetry.dependencies]
python = "^3.9"
watchdog = "^2.1.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
