[tool.poetry]
name = "twine watchdog"
version = "0.1.0"
description = "This is a tool to inject the script tags into the html files created by Twine IDE"
authors = ["Yusef Neeme"]

[tool.poetry.dependencies]
python = "^3.9"
watchdog = "^2.1.6"
pyparsing = "^3.0.6"
attrs = "^21.2.0"
packaging = "^21.3"
pluggy = "^1.0.0"
more-itertools = "^8.11.0"
py = "^1.11.0"
wcwidth = "^0.2.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
